# Chip8-Emulator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  gitignore.txt
.github/linters/: .clang-format  .jscpd.json
.github/workflows/: cmake-multi-platform.yml  superlinter.yml
RaylibApp/: CMakeLists.txt  RaylibApp.cpp  RaylibApp.h
src/: CMakeLists.txt  _windows.h  chip8.cpp  chip8.h  display.cpp  display.h  font.cpp  font.h  gui.cpp  gui.h  main.cpp  pch.h
src/log/: Log.cpp  Log.h  log.cpp  log.h  stb_sprintf.h
